overflow fix

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,10 +1,15 @@
 body {
-	background-color:#f8e8c8;
-    font-family: 'Roboto', sans-serif;;
+	  background-color:#f8e8c8;
+    font-family: 'Roboto', sans-serif;
+    color: #ffffff;
 }
 @font-face {
     font-family: Segoe_font;
     src: url(segoe-script-regular.ttf);
+}
+.row {
+  margin-right: 0;
+  margin-left: 0;
 }
 header {
     color: #990b00;
@@ -59,6 +64,10 @@ header {
 .topper {
     background: url("topper_bg.jpg") no-repeat bottom center;
     height: auto;
+    margin: 0 15px;
+}
+.mobile-topper {
+    margin: 0 15px;
 }
 .sub_header {
     background: url("sub_header_bg.jpg") no-repeat top center;
@@ -69,10 +78,10 @@ header {
     margin-right: 0px;
     margin-left: 0px;
 }
-.menu-content {
+/*.menu-content {
     padding-right: 0px;
     padding-left: 0px;
-}
+}*/
 .brand_title {
     margin: 0;
     color: #ffffff;
@@ -98,7 +107,6 @@ header {
     background: url("burrito.jpg") no-repeat center;
     height: 321px;
     border: solid 25px #973200;
-    padding-bottom: 10px;
     padding: 0;
 }
 .menu-title {
@@ -142,7 +150,6 @@ header {
 }
 .order {
     background:#939c07 url("order_bg.png") no-repeat bottom right;
-    color: #ffffff;
     height: auto;
 }
 .order-title {
@@ -158,9 +165,9 @@ header {
 .total-order {
     padding: 10px 0;
 }
-.order .row {
+/*.order .row {
     margin: 0;
-}
+}*/
 .order-button {
     padding: 10px 0;
 }
